fix: enhance button styles for active state and focus visibility

--- a/style.css
+++ b/style.css
@@ -148,6 +148,20 @@ body.scroll {
   color: white;
 }
 
+.button button:active {
+  background-color: rgb(193, 201, 229);
+  color: rgb(141, 157, 218);
+  transition: background 0.2s, color 0.2s;
+}
+
+.button button {
+  -webkit-tap-highlight-color: transparent;
+}
+
+.button button:focus {
+  outline: none;
+}
+
 header {
   text-align: center;
   margin-bottom: 5px;
